--- a/index.html
+++ b/index.html
@@ -22,20 +22,30 @@
         <div class="profile">
             <img src="images/profile picture.png" width="200px" alt="profile-picture">
             <h2>Hello.</h2>
-            <p class="p-middle">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+            <p class="p-middle">I'm a developer based in Recife, Brazil. I love to create for Web and mobile devices.</p>
         </div>
         <hr>
         <div class="skills">
             <h2>My Skills.</h2>
             <div class="skill-row">
-                <img class="computer-img" src="images/computer.png"  alt="computer-img">
-                <h3>Web Development</h3>
+                <img class="frontend-img" src="images/frontend.png"  alt="frontend-img">
+                <h3>Front-End</h3>
                 <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
             </div>
             <div class="skill-row">
-                <img class="testing-img" src="images/test.png"  alt="test-img">
-                <h3>Lorem Ipsum Dolor</h3>
+                <img class="testing-img" src="images/testing.png"  alt="test-img">
+                <h3>Testing</h3>
                 <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+            </div>
+            <div class="skill-row">
+                <img class="backend-img" src="images/backend.png" alt="backend-img">
+                <h3>Back-end</h3>
+                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit ducimus accusamus corporis minima rerum impedit voluptate perspiciatis iusto?</P>
+            </div>
+            <div class="skill-row">
+                <img class="debugging-img"src="images/debug.png" alt="debugging-img">
+                <h3>Debugging</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas inventore voluptatum.</p>
             </div>
         </div>
         <hr>
